--- a/cratle_customs/static/description/index.html
+++ b/cratle_customs/static/description/index.html
@@ -8,7 +8,7 @@
     </div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
             <h2 class="oe_slogan">Installation</h2>
@@ -24,7 +24,7 @@
         <div class="oe_span12">
             <h2 class="oe_slogan">Configuration</h2>
         </div>
-        <div class="oe_span6">
+        <div class="oe_span12">
             <p class="oe_mt32">To configure this module, you need to:
                 <ul>
                     <li>Add your Administrator to Customs Declarations Administrators group </li>
@@ -37,7 +37,7 @@
      </div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
             <h2 class="oe_slogan">Usage</h2>
@@ -48,7 +48,7 @@
                 and the items contain information about the goods that are being moved across the border.</p>
             <p>Both headers and items can be created in the module, headers are termed 'Declarations' and items are 'Items'.</p>
         </div>
-        <div class="oe_span6">
+        <div class="oe_span12">
             <p class="oe_mt32">To use this module, you need to:
                 <ol>
                     <li>Create a new declaration.</li>
@@ -71,7 +71,7 @@
         <div class="oe_span12">
             <h2 class="oe_slogan">Known issues / Roadmap</h2>
         </div>
-        <div class="oe_span6">
+        <div class="oe_span12">
             <p class="oe_mt32">
                 <ul>
                     <li>Until the HMRC CDS system is generally available, declarations cannot be sent to HMRC directly without being routed through a Customs Agent.</li>
