--- a/cratle_customs/static/description/index.html
+++ b/cratle_customs/static/description/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li>Add your Administrator to Customs Declarations Administrators group </li>
                     <li>Designate a user to be the 'Data Administrator' and add them into the Data Changes group</li>
-                    <li>Discuss the documents necessary to support your declarations with Cratle Customs by emailing us at <mailto:>odoo@cratle.co.uk</mailto:></li>
+                    <li>Discuss the documents necessary to support your declarations with Cratle Customs by emailing us at &lt;<a href="mailto:odoo@cratle.co.uk">odoo@cratle.co.uk</a>&gt;</li>
                     <li>Configure the documents, either through the Settings menu or by reloading the module with updated configuration files.</li>
                 </ul>
             </p>
@@ -64,6 +64,7 @@
                 </ul>
             </p>
         </div>
+    </div>
 </section>
 
 <section class="oe_container">
@@ -95,7 +96,7 @@
         </div>
         <div class="oe_span12">
             <h3>Maintainer</h3>
-            <p>This module is maintained by <a href="https://customs.cratle.co.uk">Cratle Limited</a>.</p>
+            <p>This module is maintained by Cratle Limited.</p>
         </div>
     </div>
 </section>
