Reduced the number of available codes

--- a/cratle_customs/static/description/index.html
+++ b/cratle_customs/static/description/index.html
@@ -43,9 +43,9 @@
             <h2 class="oe_slogan">Usage</h2>
         </div>
         <div class="oe_span12">
-            <p>Customs declarations are split into headers and items.  The header contains information common to all
-                elements of the declaration such as the port of arrival and the transport method
-                and the items contain information about the goods that are being moved across the border.</p>
+            <p class="oe_mt32">Customs declarations are split into headers and items.  The header contains information
+                common to all elements of the declaration such as the port of arrival and the transport method and the
+                items contain information about the goods that are being moved across the border.</p>
             <p>Both headers and items can be created in the module, headers are termed 'Declarations' and items are 'Items'.</p>
         </div>
         <div class="oe_span12">
